New Filter Rule Wizard is unusable on Windows #4